# iia

./: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/canc/iia/: FilePickerUtils.kt  ImageUtils.kt  InferenceService.kt  MainActivity.kt  NativeLib.kt
